--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,4 +8,8 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+Welcome to my workflowr website.
+
+* [Teeth growth analysis](teeth.html)
+
+* [Rohan's site](https://shah-rohan.github.io/reproducibility/)
